# cscript

./: README.md  docker-compose.yml  pyproject.toml
cscript/: Dockerfile  __init__.py  __main__.py  cscript.ipynb  grammar.lark  grammar.py  parser.py  runtime.py  symbol.py  test_simple.py  tests.py
cscript/tests/: conftest.py  test_advanced.py  test_case.py  test_simple.py
cscript/tests/examples/: cscr-fat.cscr  cscr-hello.cscr
tests/: test_simple.py
tests/examples/: collatz.c  cscr-fat.cscr  cscr-fibo.cscr  cscr-hello.cscr  fat.cscp
