[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"


[tool.flit.metadata]
module = "cscript"
dist-name = "script"
author = "CScript Team"
author-email = "gabrielmtiveron@gmail.com"
home-page = "http://github.com/GabrielTiveron/cscript/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "click",
    "lark-parser",
]


[tool.flit.scripts]
cscript = "cscript.__main__:main"
